Clean up build file